language/move-lang/tests/move_check/parser/friend_decl_missing_semicolon.exp
error: 

   ┌── tests/move_check/parser/friend_decl_missing_semicolon.move:6:1 ───
   │
 6 │ }
   │ ^ Unexpected '}'
   ·
 6 │ }
   │ - Expected ';'
   │

